# openpgpcard-x25519-agent

./: .build.yml  .editorconfig  .pre-commit-config.yaml  README.md  coveragerc  install.sh  pyproject.toml  setup.cfg  setup.py  spellcheck-dictionary.txt  tox.ini
etc/: openpgpcard-x25519-agent.service  openpgpcard-x25519-agent.socket
src/openpgpcard_x25519_agent/: __init__.py  card.py  cli.py  client.py  client_cli.py  cnf.py  msg.py  server.py
tests/: conftest.py  test_card.py  test_client.py  test_cnf.py  test_msg.py  test_server.py
