[metadata]
name = openpgpcard-x25519-agent
description = Socket interface to Curve25519 ECDH from an OpenPGP card.
author = Arcem Tene
author_email = dev@arcemtene.com
license = GPL-3.0-or-later
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://git.sr.ht/~arx10/openpgpcard-x25519-agent
project_urls =
    Source = https://git.sr.ht/~arx10/openpgpcard-x25519-agent
platforms = Linux
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.8
install_requires =
    docopt-ng ~= 0.8
    importlib-metadata; python_version<"3.8"
    OpenPGPpy ~= 1.0
    pyscard ~= 2.0


[options.packages.find]
where = src
exclude =
    tests


[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov
    pytest-mock


[options.entry_points]
console_scripts =
    openpgpcard-x25519-agent = openpgpcard_x25519_agent.cli:main
    openpgpcard-x25519-client = openpgpcard_x25519_agent.client_cli:main


[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests


[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel


[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
ignore =
    E203 # contradicts black and PEP8 style guides
    W503 # contradicts black and PEP8 style guides
per-file-ignores =
    # I900 test requirements not checked
    # W0621 gives false positive for pytest fixture names
    conftest.py: I900, W0621
    # D103 don't need docstrings for test functions
    # D105 don't need docstrings for magic methods in test classes
    # D107 don't need docstrings for __init__ method of test classes
    # I900 test requirements not checked
    # S101 (bandit B101) assert is appropriate for tests
    # W0613 triggered by fixture names in fn signatures
    test_*: D103, D105, D107, I900, S101, W0613
exclude =
    .tox
    build
    dist
    .eggs

# flake8 plugin config

# flake8-class-attributes-order
use-class-attributes-order-strict-mode = True
# flake8-docstrings
docstring-convention = google
# flake8-functions
max-returns-amount = 9
# flake8-pytest-style
pytest-parametrize-names-type = csv
# flake8-requirements
known-modules = docopt-ng:[docopt],OpenPGPpy:[OpenPGPpy],pyscard:[smartcard]
# flake8-spellcheck
whitelist = spellcheck-dictionary.txt
